--- a/app1/package.json
+++ b/app1/package.json
@@ -14,39 +14,83 @@
   "private": true,
   "dependencies": {
     "@angular-builders/custom-webpack": "^8",
-    "@angular/animations": "~8.1.0",
-    "@angular/common": "~8.1.0",
-    "@angular/compiler": "~8.1.0",
-    "@angular/core": "~8.1.0",
-    "@angular/forms": "~8.1.0",
-    "@angular/platform-browser": "~8.1.0",
-    "@angular/platform-browser-dynamic": "~8.1.0",
-    "@angular/router": "~8.1.0",
-    "rxjs": "~6.4.0",
+    "@angular/animations": "8.2.12",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "8.2.12",
+    "@angular/compiler": "8.2.12",
+    "@angular/core": "8.2.12",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "8.2.12",
+    "@angular/material": "^8.2.3",
+    "@angular/material-moment-adapter": "^11.0.0",
+    "@angular/platform-browser": "8.2.12",
+    "@angular/platform-browser-dynamic": "8.2.12",
+    "@angular/platform-server": "8.2.12",
+    "@angular/router": "8.2.12",
+    "@auth0/angular-jwt": "^4.1.2",
+    "@libria/gridstack": "^9.0.1",
+    "@ngrx/effects": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
+    "@nguniversal/module-map-ngfactory-loader": "8.1.1",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "angular2gridster": "^8.1.2",
+    "aspnet-prerendering": "^3.0.1",
+    "classlist.js": "^1.1.20150312",
+    "clonedeep": "^2.0.0",
+    "codelyzer": "^6.0.1",
+    "core-js": "^3.6.4",
+    "countries-and-timezones": "^2.0.5",
+    "deep-diff": "^1.0.2",
+    "deepdash-es": "^5.3.2",
+    "elcp-common-core": "file:elcp-common-core-0.0.1.tgz",
+    "gridstack": "~0.6.3",
+    "hammerjs": "^2.0.8",
+    "highcharts": "^8.0.0",
+    "highcharts-angular": "^2.8.2",
+    "jasmine-marbles": "^0.6.0",
+    "jquery": "^3.5.1",
+    "lodash": "~4.17.4",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
+    "ng-click-outside": "^6.0.0",
+    "ng-select2": "^1.2.2",
+    "ngx-clipboard": "^12.3.0",
+    "ngx-image-cropper": "^3.3.3",
+    "ngx-moment": "^3.5.0",
+    "primeicons": "^4.0.0",
+    "primeng": "^9.1.0",
+    "rxjs": "^6.5.4",
+    "safe-json-stringify": "^1.2.0",
+    "select2": "^4.0.13",
     "single-spa-angular": "^3.0.1",
-    "systemjs-webpack-interop": "^2.3.6",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "tslib": "^1.10.0",
+    "url-search-params-polyfill": "^8.1.0",
+    "uuid": "^8.1.0",
+    "web-animations-js": "^2.3.2",
+    "zone.js": "0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.0",
-    "@angular/cli": "~8.1.0",
-    "@angular/compiler-cli": "~8.1.0",
-    "@angular/language-service": "~8.1.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
+    "@angular-devkit/build-angular": "^0.803.22",
+    "@angular/cli": "8.3.14",
+    "@angular/compiler-cli": "8.2.12",
+    "@types/jquery": "^3.3.33",
+    "@types/lodash": "^4.14.149",
+    "@types/moment": "^2.13.0",
+    "@types/node": "^12.11.7",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.5.2",
+    "typescript": "3.5.3"
+  },
+  "optionalDependencies": {
+    "node-sass": "^4.12.0",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0"
   }
 }
