--- a/app2/package.json
+++ b/app2/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~10.2.4",
     "@angular/router": "~10.2.4",
     "rxjs": "~6.6.7",
+    "single-spa": "^5.9.2",
     "single-spa-angular": "4.9.2",
     "systemjs-webpack-interop": "^2.3.6",
     "tslib": "^2.0.0",
