--- a/app1/package.json
+++ b/app1/package.json
@@ -22,7 +22,7 @@
     "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "8.2.14",
     "@angular/material": "^8.2.3",
-    "@angular/material-moment-adapter": "^11.0.0",
+    "@angular/material-moment-adapter": "9.1.3",
     "@angular/platform-browser": "8.2.14",
     "@angular/platform-browser-dynamic": "8.2.14",
     "@angular/platform-server": "8.2.14",
@@ -54,7 +54,7 @@
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.28",
     "ng-click-outside": "^6.0.0",
-    "ng-select2": "^1.2.2",
+    "ng-select2": "9.1.13",
     "ngx-clipboard": "^12.3.0",
     "ngx-image-cropper": "^3.3.3",
     "ngx-moment": "^3.5.0",
