--- a/app1/package.json
+++ b/app1/package.json
@@ -60,7 +60,8 @@
     "primeng": "^9.1.0",
     "rxjs": "^6.5.4",
     "safe-json-stringify": "^1.2.0",
-    "single-spa-angular": "^3.0.1",
+    "single-spa": "^5.9.2",
+    "single-spa-angular": "4.9.2",
     "tslib": "^1.10.0",
     "url-search-params-polyfill": "^8.1.0",
     "uuid": "^8.1.0",
