--- a/app1/package.json
+++ b/app1/package.json
@@ -14,19 +14,19 @@
   "private": true,
   "dependencies": {
     "@angular-builders/custom-webpack": "^8",
-    "@angular/animations": "9.1.13",
+    "@angular/animations": "10.2.4",
     "@angular/cdk": "^9.2.4",
-    "@angular/common": "9.1.13",
-    "@angular/compiler": "9.1.13",
-    "@angular/core": "9.1.13",
+    "@angular/common": "10.2.4",
+    "@angular/compiler": "10.2.4",
+    "@angular/core": "10.2.4",
     "@angular/flex-layout": "^9.0.0-beta.31",
-    "@angular/forms": "9.1.13",
+    "@angular/forms": "10.2.4",
     "@angular/material": "^9.2.4",
     "@angular/material-moment-adapter": "9.2.4",
-    "@angular/platform-browser": "9.1.13",
-    "@angular/platform-browser-dynamic": "9.1.13",
-    "@angular/platform-server": "9.1.13",
-    "@angular/router": "9.1.13",
+    "@angular/platform-browser": "10.2.4",
+    "@angular/platform-browser-dynamic": "10.2.4",
+    "@angular/platform-server": "10.2.4",
+    "@angular/router": "10.2.4",
     "@auth0/angular-jwt": "^4.1.2",
     "@libria/gridstack": "^9.0.1",
     "@ngrx/effects": "^10.1.2",
@@ -62,33 +62,33 @@
     "safe-json-stringify": "^1.2.0",
     "single-spa": "^5.9.2",
     "single-spa-angular": "4.9.2",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "url-search-params-polyfill": "^8.1.0",
     "uuid": "^8.1.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.15",
-    "@angular/cli": "9.1.15",
-    "@angular/compiler-cli": "9.1.13",
+    "@angular-devkit/build-angular": "^0.1002.3",
+    "@angular/cli": "10.2.3",
+    "@angular/compiler-cli": "10.2.4",
     "@types/jquery": "^3.3.33",
     "@types/lodash": "^4.14.149",
     "@types/moment": "^2.13.0",
     "@types/node": "^12.11.7",
     "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.5.2",
-    "typescript": "3.8.3"
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "typescript": "4.0.7"
   },
   "optionalDependencies": {
     "node-sass": "^4.12.0",
-    "protractor": "~5.4.2",
+    "protractor": "~7.0.0",
     "ts-node": "~8.4.1",
-    "tslint": "~5.20.0"
+    "tslint": "~6.1.0"
   }
 }
